--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
+    "@tabler/icons-react": "^3.35.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
